// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zones store fetch regions can fetch region geometries for empty regions 1`] = `
Object {
  "3": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 3,
    "name": "5 Cities",
  },
  "4": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 4,
    "name": "Arizona",
  },
  "5": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "Polygon",
    },
    "id": 5,
    "name": "Beach Cities Brands",
  },
  "6": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "Polygon",
    },
    "id": 6,
    "name": "Central California Brands",
  },
  "7": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 7,
    "name": "Downtown LA Brands",
  },
}
`;

exports[`Zones store fetch regions can fetch region geometries with custom bounding box 1`] = `
Object {
  "3": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 3,
    "name": "5 Cities",
  },
  "4": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 4,
    "name": "Arizona",
  },
  "5": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "Polygon",
    },
    "id": 5,
    "name": "Beach Cities Brands",
  },
  "6": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "Polygon",
    },
    "id": 6,
    "name": "Central California Brands",
  },
  "7": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 7,
    "name": "Downtown LA Brands",
  },
}
`;

exports[`Zones store fetch regions can fetch region geometries with empty bounding box 1`] = `
Object {
  "3": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 3,
    "name": "5 Cities",
  },
  "4": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 4,
    "name": "Arizona",
  },
  "5": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "Polygon",
    },
    "id": 5,
    "name": "Beach Cities Brands",
  },
  "6": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "Polygon",
    },
    "id": 6,
    "name": "Central California Brands",
  },
  "7": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 7,
    "name": "Downtown LA Brands",
  },
}
`;

exports[`Zones store fetch regions can fetch region geometries without bounding box 1`] = `
Object {
  "3": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 3,
    "name": "5 Cities",
  },
  "4": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 4,
    "name": "Arizona",
  },
  "5": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "Polygon",
    },
    "id": 5,
    "name": "Beach Cities Brands",
  },
  "6": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "Polygon",
    },
    "id": 6,
    "name": "Central California Brands",
  },
  "7": Object {
    "geometry": Object {
      "coordinates": Array [],
      "type": "MultiPolygon",
    },
    "id": 7,
    "name": "Downtown LA Brands",
  },
}
`;

exports[`Zones store fetch regions can fetch regions for zones 1`] = `
Object {
  "3": Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          Array [
            -117.75257,
            33.59035,
          ],
          Array [
            -117.75297,
            33.59007,
          ],
          Array [
            -117.75338,
            33.58962,
          ],
          Array [
            -117.754191,
            33.588351,
          ],
          Array [
            -117.753387,
            33.58794,
          ],
          Array [
            -117.750067,
            33.586206,
          ],
          Array [
            -117.750061,
            33.583988,
          ],
          Array [
            -117.749015,
            33.583556,
          ],
          Array [
            -117.749458,
            33.583346,
          ],
          Array [
            -117.749953,
            33.582821,
          ],
        ],
      ],
      "type": "Polygon",
    },
    "id": 3,
    "name": "South OC",
  },
  "4": Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          Array [
            -117.75257,
            33.59035,
          ],
          Array [
            -117.75297,
            33.59007,
          ],
          Array [
            -117.75338,
            33.58962,
          ],
          Array [
            -117.754191,
            33.588351,
          ],
          Array [
            -117.753387,
            33.58794,
          ],
          Array [
            -117.750067,
            33.586206,
          ],
          Array [
            -117.750061,
            33.583988,
          ],
          Array [
            -117.749015,
            33.583556,
          ],
          Array [
            -117.749458,
            33.583346,
          ],
          Array [
            -117.749953,
            33.582821,
          ],
        ],
      ],
      "type": "Polygon",
    },
    "id": 4,
    "name": "Central California",
  },
  "5": Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          Array [
            -117.75257,
            33.59035,
          ],
          Array [
            -117.75297,
            33.59007,
          ],
          Array [
            -117.75338,
            33.58962,
          ],
          Array [
            -117.754191,
            33.588351,
          ],
          Array [
            -117.753387,
            33.58794,
          ],
          Array [
            -117.750067,
            33.586206,
          ],
          Array [
            -117.750061,
            33.583988,
          ],
          Array [
            -117.749015,
            33.583556,
          ],
          Array [
            -117.749458,
            33.583346,
          ],
          Array [
            -117.749953,
            33.582821,
          ],
        ],
      ],
      "type": "Polygon",
    },
    "id": 5,
    "name": "Oregon",
  },
  "6": Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          Array [
            -117.75257,
            33.59035,
          ],
          Array [
            -117.75297,
            33.59007,
          ],
          Array [
            -117.75338,
            33.58962,
          ],
          Array [
            -117.754191,
            33.588351,
          ],
          Array [
            -117.753387,
            33.58794,
          ],
          Array [
            -117.750067,
            33.586206,
          ],
          Array [
            -117.750061,
            33.583988,
          ],
          Array [
            -117.749015,
            33.583556,
          ],
          Array [
            -117.749458,
            33.583346,
          ],
          Array [
            -117.749953,
            33.582821,
          ],
        ],
      ],
      "type": "Polygon",
    },
    "id": 6,
    "name": "Arkansas",
  },
  "7": Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          Array [
            -117.75257,
            33.59035,
          ],
          Array [
            -117.75297,
            33.59007,
          ],
          Array [
            -117.75338,
            33.58962,
          ],
          Array [
            -117.754191,
            33.588351,
          ],
          Array [
            -117.753387,
            33.58794,
          ],
          Array [
            -117.750067,
            33.586206,
          ],
          Array [
            -117.750061,
            33.583988,
          ],
          Array [
            -117.749015,
            33.583556,
          ],
          Array [
            -117.749458,
            33.583346,
          ],
          Array [
            -117.749953,
            33.582821,
          ],
        ],
      ],
      "type": "Polygon",
    },
    "id": 7,
    "name": "Texas",
  },
}
`;

exports[`Zones store views can compute regionsWithoutZones 1`] = `Array []`;

exports[`Zones store views can compute zoneRegions 1`] = `
Array [
  Object {
    "id": "64d05017-4339-4cda-9e57-0da061bf6b00",
    "name": "South OC",
    "wmRegionId": 3,
  },
  Object {
    "id": "2411d92b-d816-4d63-be75-d1a526cb84b3",
    "name": "Central California",
    "wmRegionId": 4,
  },
  Object {
    "id": "f72ef8f0-3ba0-40d7-b328-613ab851bc26",
    "name": "Oregon",
    "wmRegionId": 5,
  },
  Object {
    "id": "fd167cb8-5be3-4c5e-9207-1e78b771c11d",
    "name": "Arkansas",
    "wmRegionId": 6,
  },
  Object {
    "id": "edd2ef7e-00b4-444d-b3e3-996ccbaa7b95",
    "name": "Texas",
    "wmRegionId": 7,
  },
]
`;

exports[`Zones store views can compute zoneRegionsById 1`] = `
Object {
  "3": Object {
    "region": Object {
      "id": "64d05017-4339-4cda-9e57-0da061bf6b00",
      "name": "South OC",
      "wmRegionId": 3,
    },
    "zone": Object {
      "cId": "78d2a139-bf28-4570-a787-be3d3b297487",
      "color": "#F5A623",
      "id": "78d2a139-bf28-4570-a787-be3d3b297487",
      "name": "SoCal",
      "regions": Array [
        Object {
          "id": "64d05017-4339-4cda-9e57-0da061bf6b00",
          "name": "South OC",
          "wmRegionId": 3,
        },
      ],
    },
  },
  "4": Object {
    "region": Object {
      "id": "2411d92b-d816-4d63-be75-d1a526cb84b3",
      "name": "Central California",
      "wmRegionId": 4,
    },
    "zone": Object {
      "cId": "89cfc0ca-4410-49e2-af3a-f74808926bbd",
      "color": "#D0021B",
      "id": "89cfc0ca-4410-49e2-af3a-f74808926bbd",
      "name": "Andrew's Zone #3 3449 Updated 5",
      "regions": Array [
        Object {
          "id": "2411d92b-d816-4d63-be75-d1a526cb84b3",
          "name": "Central California",
          "wmRegionId": 4,
        },
        Object {
          "id": "f72ef8f0-3ba0-40d7-b328-613ab851bc26",
          "name": "Oregon",
          "wmRegionId": 5,
        },
        Object {
          "id": "fd167cb8-5be3-4c5e-9207-1e78b771c11d",
          "name": "Arkansas",
          "wmRegionId": 6,
        },
        Object {
          "id": "edd2ef7e-00b4-444d-b3e3-996ccbaa7b95",
          "name": "Texas",
          "wmRegionId": 7,
        },
      ],
    },
  },
  "5": Object {
    "region": Object {
      "id": "f72ef8f0-3ba0-40d7-b328-613ab851bc26",
      "name": "Oregon",
      "wmRegionId": 5,
    },
    "zone": Object {
      "cId": "89cfc0ca-4410-49e2-af3a-f74808926bbd",
      "color": "#D0021B",
      "id": "89cfc0ca-4410-49e2-af3a-f74808926bbd",
      "name": "Andrew's Zone #3 3449 Updated 5",
      "regions": Array [
        Object {
          "id": "2411d92b-d816-4d63-be75-d1a526cb84b3",
          "name": "Central California",
          "wmRegionId": 4,
        },
        Object {
          "id": "f72ef8f0-3ba0-40d7-b328-613ab851bc26",
          "name": "Oregon",
          "wmRegionId": 5,
        },
        Object {
          "id": "fd167cb8-5be3-4c5e-9207-1e78b771c11d",
          "name": "Arkansas",
          "wmRegionId": 6,
        },
        Object {
          "id": "edd2ef7e-00b4-444d-b3e3-996ccbaa7b95",
          "name": "Texas",
          "wmRegionId": 7,
        },
      ],
    },
  },
  "6": Object {
    "region": Object {
      "id": "fd167cb8-5be3-4c5e-9207-1e78b771c11d",
      "name": "Arkansas",
      "wmRegionId": 6,
    },
    "zone": Object {
      "cId": "89cfc0ca-4410-49e2-af3a-f74808926bbd",
      "color": "#D0021B",
      "id": "89cfc0ca-4410-49e2-af3a-f74808926bbd",
      "name": "Andrew's Zone #3 3449 Updated 5",
      "regions": Array [
        Object {
          "id": "2411d92b-d816-4d63-be75-d1a526cb84b3",
          "name": "Central California",
          "wmRegionId": 4,
        },
        Object {
          "id": "f72ef8f0-3ba0-40d7-b328-613ab851bc26",
          "name": "Oregon",
          "wmRegionId": 5,
        },
        Object {
          "id": "fd167cb8-5be3-4c5e-9207-1e78b771c11d",
          "name": "Arkansas",
          "wmRegionId": 6,
        },
        Object {
          "id": "edd2ef7e-00b4-444d-b3e3-996ccbaa7b95",
          "name": "Texas",
          "wmRegionId": 7,
        },
      ],
    },
  },
  "7": Object {
    "region": Object {
      "id": "edd2ef7e-00b4-444d-b3e3-996ccbaa7b95",
      "name": "Texas",
      "wmRegionId": 7,
    },
    "zone": Object {
      "cId": "89cfc0ca-4410-49e2-af3a-f74808926bbd",
      "color": "#D0021B",
      "id": "89cfc0ca-4410-49e2-af3a-f74808926bbd",
      "name": "Andrew's Zone #3 3449 Updated 5",
      "regions": Array [
        Object {
          "id": "2411d92b-d816-4d63-be75-d1a526cb84b3",
          "name": "Central California",
          "wmRegionId": 4,
        },
        Object {
          "id": "f72ef8f0-3ba0-40d7-b328-613ab851bc26",
          "name": "Oregon",
          "wmRegionId": 5,
        },
        Object {
          "id": "fd167cb8-5be3-4c5e-9207-1e78b771c11d",
          "name": "Arkansas",
          "wmRegionId": 6,
        },
        Object {
          "id": "edd2ef7e-00b4-444d-b3e3-996ccbaa7b95",
          "name": "Texas",
          "wmRegionId": 7,
        },
      ],
    },
  },
}
`;
